CASSANALYTICS-34: Spark 4.0 Support (#163)
Patch by Francisco Guerrero; reviewed by Yifan Cai for CASSANALYTICS-34