@@ -25,10 +25,11 @@ plugins {
     id('maven-publish')
 }
 
-if (propertyWithDefault("artifactType", null) == "spark")
-{
+if (propertyWithDefault("artifactType", null) == "spark") {
     apply from: "$rootDir/gradle/common/publishing.gradle"
 }
+
+apply from: "${project.rootDir}/gradle/common/javaOptions.gradle"
 
 java {
     withJavadocJar()
@@ -159,26 +160,8 @@ jar {
 // (CI) or falls back to all supported versions (local dev).
 def configureCoreTestTask(Test task, String majorMinor = null) {
     task.doFirst {
-        if (JavaVersion.current().isJava11Compatible()) {
-            def JDK11_OPTIONS = ['-Djdk.attach.allowAttachSelf=true',
-                                 '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED',
-                                 '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED',
-                                 '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
-                                 '--add-exports', 'java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED',
-                                 '--add-exports', 'java.rmi/sun.rmi.registry=ALL-UNNAMED',
-                                 '--add-exports', 'java.rmi/sun.rmi.server=ALL-UNNAMED',
-                                 '--add-exports', 'java.sql/java.sql=ALL-UNNAMED',
-                                 '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
-                                 '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED',
-                                 '--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED',
-                                 '--add-opens', 'java.base/jdk.internal.reflect=ALL-UNNAMED',
-                                 '--add-opens', 'java.base/jdk.internal.math=ALL-UNNAMED',
-                                 '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
-                                 '--add-opens', 'java.base/jdk.internal.util.jar=ALL-UNNAMED',
-                                 '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED']
-            task.jvmArgs(JDK11_OPTIONS)
-            println("JVM arguments for $project.name are $allJvmArgs")
-        }
+        task.jvmArgs(project.ext.JDK_OPTIONS)
+        println("JVM arguments for $project.name are $allJvmArgs")
     }
 
     task.systemProperty "cassandra.analytics.bridges.sstable_format", System.getProperty("cassandra.analytics.bridges.sstable_format", "big")
@@ -222,6 +205,8 @@ test {
     maxParallelForks = System.getenv('CORE_MAX_PARALLEL_FORKS')?.toInteger()
                        ?: Math.max(Runtime.runtime.availableProcessors() * 2, 8)
 
+    jvmArgs(project.ext.JDK_OPTIONS)
+
     useJUnitPlatform {
         excludeTags 'Sequential'
     }
@@ -261,7 +246,7 @@ rootProject.ext.cassandraVersionEnumMap.keySet().each { majorMinor ->
 
 /* Start: JaCoCo check */
 jacoco {
-    toolVersion = '0.8.4'
+    toolVersion = '0.8.13'
 }
 
 jacocoTestReport {
